make-a-wish-salesforce/src/objects/MaintenanceAlert__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Scheduled System Maintenance alert content for use on WVC login page and login flows for internal users.</description>
    <fields>
        <fullName>Body_1__c</fullName>
        <description>Body1 content to be used in Notification alert.</description>
        <label>Body_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Body_2__c</fullName>
        <description>Body2 content to be used in Notification alert.</description>
        <label>Body_2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_1__c</fullName>
        <description>Heading 1 for Notification Alert.</description>
        <label>Header_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_2__c</fullName>
        <description>Heading 2 for Notification Alert.</description>
        <label>Header_2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isActiveLockout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to control if the user should be prevented from logging into the platform.</description>
        <label>isActiveLockout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to control if the Alert Notification Head and Body content is displayed.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>MaintenanceAlert</label>
</CustomObject>